k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: single-tier-application-service
  labels:
    app: single-tier-application
    environment: dev
    owner: dev-team
  namespace: single-tier-application-namespace

spec:
  selector:
    app: single-tier-application
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
